client/src/index.css
@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
@import url('https://fonts.googleapis.com/css?family=PT+Sans');

body {
  font-family: 'PT Sans', sans-serif;
}

figure {
  margin: 0.5em;
}

ul {
    list-style-type: none;
    padding: 0;
}

a {
  color: #383D8B;
}

a:hover {
  color: #5A5ACD;
}

img {
  max-width: 100%;
  height: auto;
  justify: center;
}

.chapter-name {
  margin-top: 0.75em;
}

.banner {
  background-size: cover;
  width:100%;
  height: 20em;
  color: white;
  display: flex;
  align-items: center;
  text-shadow: 2px 2px 4px black;
}

.banner-home {
  background-image: url("/banner-home.png");
}

.banner-progress {
  background-image: url("/banner-progress.png");
}

.footer-blurb {
  color: #fff;
  list-style: none;
}


.card {
  margin: 1em;
}

.card-home {
  height: 468px;
  margin-bottom: 30px;
  margin-top: 30px;
  cursor: pointer;
  border-radius: 3px;
  box-shadow: 1px 1px 0 #e2e2e2;
  position: relative;
  background: #ffffff;
  min-width: 14em;
  max-width: 14em;
}

.card-img {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
  width: 100%;
  height: auto;
}

.card-deck {
  width: 100%;
  justify-content: space-around;
  padding-bottom: 2em;
}

.card-title {
  font-weight: bold;
  font-size-adjust: auto;
}

.card-block {
  border: 1px;
  border-color: grey;
}

.nav {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.nav-item {
  padding: 0.5em;
}

.nav-item a {
  color: #ffc107;
}

.CircularProgressbar {
  display: flex;
  justify-content: center;
  }


.CircularProgressbar .CircularProgressbar-path {
  stroke: #3e98c7;
  stroke-linecap: round;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.CircularProgressbar .CircularProgressbar-trail {
  stroke: #d6d6d6;
}

.CircularProgressbar .CircularProgressbar-text {
  fill: #3e98c7;
  font-size: 20px;
  dominant-baseline: middle;
  text-anchor: middle;
}

.CircularProgressbar .CircularProgressbar-background {
  fill: #d6d6d6;
}

.btn-primary {
  border: none;
  background-color: #383D8B;
  align: center;
}

.btn-primary:hover{
    background: #5A5ACD;
}

.btn-link {
  color: #fff;
}

.dv-star-rating.review-star {
  font-size: 250%;
}

.chapter-name {
  padding-top: 0.25em;
  display: inline-block;
  font-size: 115%;
}

.review-star-title-container {
  vertical-align: middle;
}

.review-card {
  padding: 0 1em;
}

